# smplc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ir_out.dot
.github/workflows/: action.yml
docker/: Dockerfile
exec/: ArgParse.cpp  ArgParse.hpp  CMakeLists.txt  ColorPrint.hpp  smplc.cpp
include/: CSEPass.hpp  EmitWasmPass.hpp  Exception.hpp  GenWasm.hpp  GenWasmPass.hpp  IR.hpp  IRGeneratorPass.hpp  IRVisualizerPass.hpp  Logger.hpp  Parser.hpp  PrintPass.hpp  RemapPass.hpp  Source.hpp  Wasm.hpp
lib/: CMakeLists.txt  CSEPass.cpp  EmitWasmPass.cpp  Exception.cpp  GenWasm.cpp  GenWasmPass.cpp  IR.cpp  IRGeneratorPass.cpp  IRVisualizerPass.cpp  Logger.cpp  Parser.cpp  PrintPass.cpp  RemapPass.cpp  Source.cpp
test/regression/: CMakeLists.txt  CSE.smpl  CSE_array.smpl  CSE_with_if.smpl  CSE_with_while.smpl  array.smpl  array_invalid_size_1.smpl  func.smpl
test/regression/IRGenerator/: README.md  arith_main.smpl  assign_variable_main.smpl  if_main.smpl  if_one_side_uninit_main.smpl  if_one_side_uninit_unuse_main.smpl  if_phi_same_main.smpl  if_with_uninit_main.smpl  varDecl_main_array.smpl  varDecl_main_var.smpl  while_main.smpl
test/regression/Parser/: assigment_1.smpl  assigment_2.invalid.smpl  assigment_3.invalid.smpl  assigment_4.invalid.smpl  assigment_5.invalid.smpl  computation_1.smpl  computation_2.smpl  computation_3.smpl  computation_4.invalid.smpl  computation_5.invalid.smpl  computation_6.invalid.smpl  computation_7.invalid.smpl  computation_8.invalid.smpl  designator_1.smpl  designator_2.invalid.smpl  designator_3.invalid.smpl  designator_4.invalid.smpl  expression_1.smpl  factor_1.smpl  factor_2.invalid.smpl  factor_3.invalid.smpl  factor_4.invalid.smpl  formalParam_1.smpl  formalParam_2.invalid.smpl  formalParam_3.invalid.smpl  funcBody_1.smpl  funcBody_2.invalid.smpl  funcBody_3.invalid.smpl  funcCall_1.smpl  funcCall_2.invalid.smpl  funcCall_3.invalid.smpl  funcCall_4.invalid.smpl  funcCall_5.invalid.smpl  funcDecl_1.smpl  funcDecl_2.invalid.smpl  funcDecl_3.invalid.smpl  funcDecl_4.invalid.smpl  funcDecl_5.invalid.smpl  funcDecl_6.invalid.smpl  ident_1.smpl  (+33 more)
test/unit/: CMakeLists.txt  test_Logger.cpp  test_Parser_Assignment.cpp  test_Parser_Designator.cpp  test_Parser_Digit.cpp  test_Parser_Expression.cpp  test_Parser_Factor.cpp  test_Parser_Ident.cpp  test_Parser_Letter.cpp  test_Parser_Number.cpp  test_Source.cpp
test/unit/parser/: CMakeLists.txt  test_Parser_Assignment.cpp  test_Parser_Computation.cpp  test_Parser_Designator.cpp  test_Parser_Digit.cpp  test_Parser_Expression.cpp  test_Parser_Factor.cpp  test_Parser_FormalParam.cpp  test_Parser_FuncBody.cpp  test_Parser_FuncCall.cpp  test_Parser_FuncDecl.cpp  test_Parser_Ident.cpp  test_Parser_IfStatement.cpp  test_Parser_Letter.cpp  test_Parser_Number.cpp  test_Parser_RelOp.cpp  test_Parser_Relation.cpp  test_Parser_ReturnStatement.cpp  test_Parser_StatSequence.cpp  test_Parser_Statement.cpp  test_Parser_Term.cpp  test_Parser_TypeDecl.cpp  test_Parser_VarDecl.cpp  test_Parser_WhileStatement.cpp
